# BoilR

./: Cargo.toml
cli/: Cargo.toml
cli/src/: main.rs
egs/: Cargo.toml
egs/src/: epic_platform.rs  manifest_item.rs
gog/: Cargo.toml
gog/src/: gog_game.rs  gog_platform.rs
itch/: Cargo.toml
itch/src/: butler_db_parser.rs  itch_game.rs  itch_platform.rs
legendary/: Cargo.toml
legendary/src/: legendary_platform.rs
main/: Cargo.toml
main/src/: lib.rs  main.rs  settings.rs
main/src/gog/: gog_platform.rs
main/src/sync/: synchronization.rs
main/src/uplay/: mod.rs
origin/: Cargo.toml
origin/src/: origin_platform.rs
platform/: Cargo.toml
platform/src/: lib.rs
src/gog/: gog_game.rs  gog_platform.rs
src/steamgriddb/: downloader.rs
ui/: Cargo.toml  build.rs
ui/src/: main.rs
uplay/: Cargo.toml
uplay/src/: game.rs  platform.rs
