[package]
name = "itch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform = {path = "../platform"}
nom = "^7.0.*"
steam_shortcuts_util = "^1.1.4"
serde = { version = "^1.0.130", features = ["derive"] }
failure = "^0.1.8"
serde_json = "^1.0.68"
flate2 = "^1.0.22"
