[package]
name = "ui"
version = "0.2.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "^1.11.0", features = ["full"] }
#https://fltk-rs.github.io/fltk-rs/
fltk = { version = "^1.2", features = ["fltk-bundled"]}
toml = { version = "^0.5.8" }
futures = { version = "^0.3.17" }

egs = {path = "../egs"}
gog = {path = "../gog"}
itch = {path = "../itch"}
uplay = {path = "../uplay"}
legendary = {path = "../legendary"}
origin = {path = "../origin"}

main = {path = "../main"}

[build-dependencies]
fl2rust = { version = "0.4" }