[package]
name = "uplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
platform = {path = "../platform"}
steam_shortcuts_util = "^1.1.4"
serde = { version = "^1.0.130", features = ["derive"] }



[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"